# Copyright (c) 2019 Digital Asset (Switzerland) GmbH and/or its affiliates. All rights reserved.
# SPDX-License-Identifier: Apache-2.0

load("@io_bazel_skydoc//skylark:skylark.bzl", "skylark_doc")

skylark_doc(
    name = "docs",
    srcs = [
        "//bazel_tools:haskell.bzl",
        "//bazel_tools:scala.bzl",
        # "//bazel_tools/scalafmt:scalafmt.bzl",
        "//bazel_tools/packaging:packaging.bzl",
        "//bazel_tools/java_testing:java_test_suite.bzl",
        "//rules_daml:daml.bzl",
    ],
    format = "html",
)
