# Copyright (c) 2024 Digital Asset (Switzerland) GmbH and/or its affiliates. All rights reserved.
# SPDX-License-Identifier: Apache-2.0

# This configures ScalaPB to stop emitting "unknownFields" properties.
# They play havoc both with `unapply` calls, as you always need an extra `_` to ignore them,
# and also with automatically-derived Circe JSON encoders and decoders.

load("@rules_proto//proto:defs.bzl", "proto_library")
load("@scala_version//:index.bzl", "scala_major_version_suffix")

proto_library(
    name = "scalapb-configuration",
    srcs = glob(["**/*.proto"]),
    visibility = ["//visibility:public"],
    deps = ["@scalapb//:scalapb_proto"],
)
